# symphovert

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
src/symphovert/: __init__.py  cli.py  convert.py  convert_map.json  exceptions.py
symphovert/: ArchiveFileRel.py  cli.py  convert.py  convert_file.py  convert_map.json  db.py
tests/: conftest.py  test_convert.py
