[tool.poetry]
name = "symphovert"
version = "0.1.0"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>", 
    "Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://stadsarkiv.aarhus.dk/"

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.7.0"
pyautogui = "^0.9.52"
click = "^7.1.2"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.8"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.782"

[tool.poetry.scripts]
symphovert = "symphovert.cli:cli"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

