[tool.poetry]
name = "symphovert"
version = "0.2.1"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>", 
    "Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://stadsarkiv.aarhus.dk/"

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.1"
pyautogui = "^0.9.52"
click = "^7.1.2"
pydantic = "^1.8"
convertool = {git = "https://github.com/aarhusstadsarkiv/convertool.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.991"

[tool.poetry.scripts]
symphovert = "symphovert.cli:cli"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

